src/test/ui/repr/repr-transparent.stderr
error[E0690]: transparent struct needs at most one non-zero-sized field, but has 2
  --> $DIR/repr-transparent.rs:26:1
   |
LL | struct MultipleNonZst(u8, u8);
   | ^^^^^^^^^^^^^^^^^^^^^^--^^--^^
   | |                     |   |
   | |                     |   this field is non-zero-sized
   | |                     this field is non-zero-sized
   | needs at most one non-zero-sized field, but has 2

error[E0690]: transparent struct needs at most one non-zero-sized field, but has 2
  --> $DIR/repr-transparent.rs:32:1
   |
LL | pub struct StructWithProjection(f32, <f32 as Mirror>::It);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---^^-------------------^^
   | |                               |    |
   | |                               |    this field is non-zero-sized
   | |                               this field is non-zero-sized
   | needs at most one non-zero-sized field, but has 2

error[E0691]: zero-sized field in transparent struct has alignment larger than 1
  --> $DIR/repr-transparent.rs:36:32
   |
LL | #[repr(transparent)]
   |        ----------- help: Try using `repr(C)` instead
LL | struct NontrivialAlignZst(u32, [u16; 0]);
   |                                ^^^^^^^^ has alignment of 2, which is larger than 1

error[E0691]: zero-sized field in transparent struct has alignment larger than 1
  --> $DIR/repr-transparent.rs:42:24
   |
LL | #[repr(transparent)]
   |        ----------- help: Try using `repr(C)` instead
LL | struct GenericAlign<T>(ZstAlign32<T>, u32);
   |                        ^^^^^^^^^^^^^ has alignment of 32, which is larger than 1

error[E0691]: zero-sized field in transparent struct has alignment larger than 1
  --> $DIR/repr-transparent.rs:45:33
   |
LL | #[repr(transparent)]
   |        ----------- help: Try using `repr(C)` instead
LL | struct GenericAlignZeroArray<T>([T; 0], u32);
   |                                 ^^^^^^ may have alignment larger than 1

error[E0084]: unsupported representation for zero-variant enum
  --> $DIR/repr-transparent.rs:47:1
   |
LL | #[repr(transparent)]
   | ^^^^^^^^^^^^^^^^^^^^
LL | enum Void {}
   | ------------ zero-variant enum

error[E0731]: transparent enum needs exactly one variant, but has 0
  --> $DIR/repr-transparent.rs:48:1
   |
LL | enum Void {}
   | ^^^^^^^^^ needs exactly one variant, but has 0

error[E0690]: the variant of a transparent enum needs at most one non-zero-sized field, but has 2
  --> $DIR/repr-transparent.rs:61:1
   |
LL | enum TooManyFieldsEnum {
   | ^^^^^^^^^^^^^^^^^^^^^^ needs at most one non-zero-sized field, but has 2
LL |     Foo(u32, String),
   |         ---  ------ this field is non-zero-sized
   |         |
   |         this field is non-zero-sized

error[E0731]: transparent enum needs exactly one variant, but has 2
  --> $DIR/repr-transparent.rs:67:1
   |
LL | enum MultipleVariants {
   | ^^^^^^^^^^^^^^^^^^^^^ needs exactly one variant, but has 2
LL |     Foo(String),
   |     -----------
LL |     Bar,
   |     --- too many variants in `MultipleVariants`

error[E0691]: zero-sized field in transparent enum has alignment larger than 1
  --> $DIR/repr-transparent.rs:74:14
   |
LL | #[repr(transparent)]
   |        ----------- help: Try using `repr(C)` instead
LL | enum NontrivialAlignZstEnum {
LL |     Foo(u32, [u16; 0]),
   |              ^^^^^^^^ has alignment of 2, which is larger than 1

error[E0691]: zero-sized field in transparent enum has alignment larger than 1
  --> $DIR/repr-transparent.rs:79:11
   |
LL | #[repr(transparent)]
   |        ----------- help: Try using `repr(C)` instead
LL | enum GenericAlignEnum<T> {
LL |     Foo { bar: ZstAlign32<T>, baz: u32 }
   |           ^^^^^^^^^^^^^^^^^^ has alignment of 32, which is larger than 1

error[E0691]: zero-sized field in transparent enum has alignment larger than 1
  --> $DIR/repr-transparent.rs:84:11
   |
LL | #[repr(transparent)]
   |        ----------- help: Try using `repr(C)` instead
LL | enum GenericAlignEnumZeroArray<T> {
LL |     Foo { bar: [T; 0], baz: u32 }
   |           ^^^^^^^^^^^ may have alignment larger than 1

error[E0690]: transparent union needs at most one non-zero-sized field, but has 2
  --> $DIR/repr-transparent.rs:93:1
   |
LL | union TooManyFields {
   | ^^^^^^^^^^^^^^^^^^^ needs at most one non-zero-sized field, but has 2
LL |     u: u32,
   |     ------ this field is non-zero-sized
LL |     s: i32
   |     ------ this field is non-zero-sized

error: aborting due to 13 previous errors

Some errors have detailed explanations: E0084, E0690, E0691, E0731.
For more information about an error, try `rustc --explain E0084`.
